--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
             <version>5.11.4</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>4.11.0</version>
+    <scope>test</scope>
+</dependency>
+
   </dependencies>
     <build>
         <plugins>
