lidar error fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mainClass": "bgu.spl.mics.application.GurionRockRunner",
             "projectName": "spl225ass2",
             "args": "./configuration_file.json",
-            "cwd": "/workspaces/SPL_Assignment2/example_input_with_error"
+            "cwd": "/workspaces/SPL_Assignment2/example_input_2 copy"
         },
         {
             "type": "java",
