--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,6 @@
             <version>5.11.4</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-    <groupId>org.mockito</groupId>
-    <artifactId>mockito-core</artifactId>
-    <version>4.11.0</version>
-    <scope>test</scope>
-</dependency>
-
   </dependencies>
     <build>
         <plugins>
@@ -59,6 +51,16 @@
                     <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version> 
+                <configuration>
+                    <mainClass>bgu.spl.mics.application.GurionRockRunner</mainClass> 
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
