--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mainClass": "bgu.spl.mics.application.GurionRockRunner",
             "projectName": "spl225ass2",
-            "args": "/workspaces/SPL_Assignment2/example_input3cam/configuration_file.json",
+            "args": "/workspaces/SPL_Assignment2/'example input'/configuration_file.json",
             "cwd": "/workspaces/SPL_Assignment2/"
         },
         {
